gcc/testsuite/rust/rustc/ui/issues/issue-3008-2.rs
enum Foo { Foo_(Bar) }
struct Bar { x: Bar }
// { dg-error ".E0072." "" { target *-*-* } .-1 }

fn main() {
}

